# openenv-logistics

./: Dockerfile  README.md  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.yaml
server/: app.py  environment.py
tasks/: easy_task.py  hard_task.py  medium_task.py  tasks.yaml
tasks/delay_task/: grader.py  task.yaml
tasks/delivery_priority/: grader.py  task.yaml
tasks/dispatch_task/: grader.py  task.yaml
tasks/easy_dispatch/: __init__.py  grader.py  task.yaml
tasks/fleet_dispatch/: grader.py  task.yaml
tasks/hard_delay/: grader.py  task.yaml
tasks/medium_reroute/: grader.py  task.yaml
tasks/reroute_task/: grader.py  task.yaml
tasks/route_optimization/: grader.py  task.yaml
tasks/task_delay/: task.yaml
tasks/task_dispatch/: task.yaml
tasks/task_reroute/: task.yaml
